add fonts do basic position of header header 60%

--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='css/reset.css'/>
+    <link rel='stylesheet' href='css/style.css'/>
 </head>
 <body>
     <div class="header">
-        <div class="header__wrapper">
+        <div class="header__wrapper wrapper-lg">
             <div class="header__left-side">
                 <img src='/img/logo.png' class="header__logo"></img>
-                <button class=''>Каталог курсов</button>
+                <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
             </div>
             <div class="header__right-side">
                 <ul class="header__list">
-                    <li class="header__item"></li>
-                    <li class="header__item"></li>
-                    <li class="header__item"></li>
-                    <li class="header__item"></li>
+                    <li class="header__item"><a href="" class="header__link">О компании</a></li>
+                    <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
+                    <li class="header__item"><a href="" class="header__link">Акции</a></li>
+                    <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
                 </ul>
-                <a href='' class="header__enter">
-
-                </a>
+                <button class="header__enter">
+                    <a href="#" class="header__link">Войти</a>
+                </button>
             </div>
         </div>
     </div>
