--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <link rel='stylesheet' href='css/style.css'/>
 </head>
 <body>
-    <div class="header">
-        <div class="header__wrapper wrapper-lg">
-            <div class="header__left-side">
-                <img src='/img/logo.png' class="header__logo"></img>
-                <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
-            </div>
-            <div class="header__right-side">
-                <ul class="header__list">
-                    <li class="header__item"><a href="" class="header__link">О компании</a></li>
-                    <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
-                    <li class="header__item"><a href="" class="header__link">Акции</a></li>
-                    <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
-                </ul>
-                <button class="header__enter">
-                    <a href="#" class="header__link">Войти</a>
-                </button>
+    <div class="start">
+        <div class="header">
+            <div class="header__wrapper wrapper-lg">
+                <div class="header__left-side">
+                    <img src='/img/logo.png' class="header__logo"></img>
+                    <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
+                </div>
+                <div class="header__right-side">
+                    <ul class="header__list">
+                        <li class="header__item"><a href="" class="header__link">О компании</a></li>
+                        <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
+                        <li class="header__item"><a href="" class="header__link">Акции</a></li>
+                        <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
+                    </ul>
+                    <button class="header__enter">
+                        <a href="#" class="header__link">Войти</a>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
