--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='css/reset.css'/>
+    <link rel='stylesheet' href='css/bootstrap.min.css'/>
     <link rel='stylesheet' href='css/style.css'/>
 </head>
 <body>
-    <div class="start">
-        <div class="header">
-            <div class="header__wrapper wrapper-lg">
-                <div class="header__left-side">
-                    <img src='/img/logo.png' class="header__logo"></img>
-                    <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
-                </div>
-                <div class="header__right-side">
-                    <ul class="header__list">
-                        <li class="header__item"><a href="" class="header__link">О компании</a></li>
-                        <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
-                        <li class="header__item"><a href="" class="header__link">Акции</a></li>
-                        <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
-                    </ul>
-                    <button class="header__enter">
-                        <a href="#" class="header__link">Войти</a>
-                    </button>
-                </div>
+    <!-- offset-md-1 -->
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                   <div class="col-md-5">
+                        <div class="header__left-side">
+                            <img src='/img/logo.png' class="header__logo"></img>
+                            <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
+                        </div>
+                   </div>
+                    <div class="col-md-6 offset-md-1">
+                        <div class="header__right-side">
+                            <ul class="header__list">
+                                <li class="header__item"><a href="" class="header__link">О компании</a></li>
+                                <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
+                                <li class="header__item"><a href="" class="header__link">Акции</a></li>
+                                <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
+                            </ul>
+                            <button class="header__enter">
+                                <a href="#" class="header__link">Войти</a>
+                            </button>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
