--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <div class="col-md-6 offset-md-1">
                         <div class="header__right-side">
                             <ul class="header__list">
-                                <li class="header__item"><a href="" class="header__link">О компании</a></li>
-                                <li class="header__item"><a href="" class="header__link">Тренинги</a></li>
-                                <li class="header__item"><a href="" class="header__link">Акции</a></li>
-                                <li class="header__item"><a href="" class="header__link">+7(3452)68-33-37</a></li>
+                                <li class="header__item header__item-1"><a href="" class="header__link">О компании</a></li>
+                                <li class="header__item header__item-2"><a href="" class="header__link">Тренинги</a></li>
+                                <li class="header__item header__item-3"><a href="" class="header__link">Акции</a></li>
+                                <li class="header__item header__item-4"><a href="" class="header__link">+7(3452)68-33-37</a></li>
                             </ul>
                             <button class="header__enter">
                                 <a href="#" class="header__link">Войти</a>
