--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
                    <div class="col-md-5">
                         <div class="header__left-side">
-                            <img src='/img/logo.png' class="header__logo"></img>
+                            <img src='/img/svg/logo.svg' class="header__logo"></img>
                             <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
                         </div>
                    </div>
@@ -34,6 +34,13 @@
                             </button>
                         </div>
                     </div>
+            </div>
+        </div>
+    </div>
+    <div class="rise">
+        <div class="container">
+            <div class="row">
+
             </div>
         </div>
     </div>
