--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
     <div class="rise">
         <div class="container">
             <div class="row">
-
+                <div class="col-md-8">
+                    <h1 class="rise__title">
+                        Повышение профессиональной квалификации дистанционно
+                    </h1>
+                </div>
+                <div class="col-md-1">
+                    <div class="rise__wrapper">
+                        <img src="img/girl__note-removebg-preview.png" alt="" class="rise__pic">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
