end skills and retraining

--- a/index.html
+++ b/index.html
@@ -85,5 +85,97 @@
             </div>
         </div>
     </div>
+    <div class="skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3 class="skills__title">
+                        Повышение квалификации
+                    </h3>
+                    <div class="skills__offer">
+                        <div class="skills__head">
+                            <h6 class="skills__name">
+                                <span class='skills__plug'>Повышение</span> квалификации медперсонала
+                            </h6>
+                            <div class="skills__pic">
+                                <img src='img/svg/alarm.svg' class="skills__icon"></img>
+                                <p class="skills__number">
+                                    72 часа
+                                </p>
+                            </div>
+                        </div>
+                        <p class="skills__text">
+                            Повышение квалификации
+                        </p>
+                        <a href="#" class="skills__record">Записаться</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <p class='skills__outset'>
+                        <a href='#' class="skills__link">
+                            посмотреть все
+                        <a>
+                    </p>
+                    <div class="skills__offer">
+                        <div class="skills__head">
+                            <h6 class="skills__name">
+                                <span class='skills__plug'>Повышение</span> квалификации педагогов
+                            </h6>
+                            <div class="skills__pic">
+                                <img src='img/svg/alarm.svg' class="skills__icon"></img>
+                                <p class="skills__number">
+                                    72 часа
+                                </p>
+                            </div>
+                        </div>
+                        <p class="skills__text">
+                            Повышение квалификации
+                        </p>
+                        <a href="#" class="skills__record">Записаться</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="retraining">
+        <div class="container">
+            <div class="row retraining__row-1">
+                <div class="col-md-7">
+                    <h3 class="retraining__title">
+                        Професссиональная переподготовка
+                    </h3>
+                </div>
+            </div>
+            <div class="row retraining__row-2">
+                    <div class="col-md-4">
+                        <div class="retraining__item">
+                            <h6 class="retraining__name">Воспитатель детского сада </h6>
+                            <p class="retraining__text">Аттестация специалистов</p>
+                            <button class="retraining__more">
+                                Подробнее
+                            </button>
+                        </div>
+                    </div>
+                   <div class="col-md-4">
+                        <div class="retraining__item">
+                            <h6 class="retraining__name">Воспитатель детского сада </h6>
+                            <p class="retraining__text">Аттестация специалистов</p>
+                            <button class="retraining__more retraining__more-2">
+                                Подробнее
+                            </button>
+                        </div>
+                   </div>
+                    <div class="col-md-4">
+                        <div class="retraining__item">
+                            <h6 class="retraining__name">Техносферная безопасность</h6>
+                            <p class="retraining__text">Аттестация специалистов</p>
+                            <button class="retraining__more">
+                                Подробнее
+                            </button>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
 </body>
 </html>
