--- a/index.html
+++ b/index.html
@@ -177,5 +177,32 @@
                 </div>
         </div>
     </div>
+    <div class="teaching">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h3 class="teaching__title">
+                        Обучение по рабочим проффесиям
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
