--- a/index.html
+++ b/index.html
@@ -179,27 +179,66 @@
     </div>
     <div class="teaching">
         <div class="container">
-            <div class="row">
+            <div class="row teaching__row-1">
                 <div class="col-md-7">
                     <h3 class="teaching__title">
                         Обучение по рабочим проффесиям
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row teaching__row-2">
                 <div class="col-md-6">
-
+                   <div class="teaching__item d-flex">
+                        <img src="img/builder-1.jpg" alt="" class="teaching__pic">
+                        <div class="teaching__info">
+                            <h6 class="teaching__name">Монтажник</h6>
+                            <p class="teaching__text">Краткосрочное обучение</p>
+                            <button class="teaching__more">Подробнее</button>
+                        </div>
+                   </div>
                 </div>
                 <div class="col-md-6">
-                    
+                    <div class="teaching__item d-flex">
+                        <img src="img/builder-3.jpg" alt="" class="teaching__pic">
+                        <div class="teaching__info">
+                            <h6 class="teaching__name">Сварщик</h6>
+                            <p class="teaching__text">Краткосрочное обучение</p>
+                            <button class="teaching__more">Подробнее</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row teaching-row-3">
                 <div class="col-md-6">
-
+                   <div class="teaching__item d-flex">
+                        <img src="img/builder-2.jpg" alt="" class="teaching__pic">
+                        <div class="teaching__info">
+                            <h6 class="teaching__name">Отделочник</h6>
+                            <p class="teaching__text">Краткосрочное обучение</p>
+                            <button class="teaching__more">Подробнее</button>
+                        </div>
+                   </div>
                 </div>
                 <div class="col-md-6">
-                    
+                   <div class="teaching__item d-flex">
+                        <img src="img/builder-4.jpg" alt="" class="teaching__pic">
+                        <div class="teaching__info">
+                            <h6 class="teaching__name">Стопальщик</h6>
+                            <p class="teaching__text">Краткосрочное обучение</p>
+                            <button class="teaching__more">Подробнее</button>
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="systemic">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h3 class="systemic__title">
+                        Системный подход к образованию
+                    </h3>
                 </div>
             </div>
         </div>
