--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='css/owl.carousel.min.css'/>
+    <link rel='stylesheet' href='css/owl.theme.default.min.css'/>
     <link rel='stylesheet' href='css/bootstrap.min.css'/>
     <link rel='stylesheet' href='css/style.css'/>
 </head>
@@ -234,14 +236,50 @@
     </div>
     <div class="systemic">
         <div class="container">
-            <div class="row">
+            <div class="row systemic__row-1">
                 <div class="col-md-7">
                     <h3 class="systemic__title">
                         Системный подход к образованию
                     </h3>
                 </div>
             </div>
+            <div class="row systemic__row-2">
+                <div class="col">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                           <div class="systemic__wrapper">
+                               <div class="systemic__pic">
+                                    <img src="img/Notebook.png" alt="" class="systemic__img">
+                               </div>
+                               <div class="systemic__info">
+                                    <p class="systemic__text">
+                                        Очное обучение
+                                    </p>
+                               </div>
+                           </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/img-444444.jpg" alt="">
+                            <span class="owl-carousel__play-button"></span>
+                            <p>debil</p>
+                        </div>
+                        <div class="item">
+                            <img src="img/img-3.jpg" alt="">
+                            <span class="owl-carousel__play-button"></span>
+                            <p>debil</p>
+                        </div>
+                        <div class="item">
+                            <img src="img/img-444444.jpg" alt="">
+                            <span class="owl-carousel__play-button"></span>
+                            <p>debil</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+<script src='js/jquery-3.5.1.min.js'></script>
+<script src='js/owl.carousel.min.js'></script>
+<script src='js/main.js'></script>
 </html>
