--- a/index.html
+++ b/index.html
@@ -259,19 +259,41 @@
                            </div>
                         </div>
                         <div class="item">
-                            <img src="img/img-444444.jpg" alt="">
-                            <span class="owl-carousel__play-button"></span>
-                            <p>debil</p>
+                            <div class="systemic__wrapper systemic__wrapper-2">
+                                <div class="systemic__pic">
+                                    <img src="img/Mackbook.png" alt="" class="systemic__img">
+                                </div>
+                                <div class="systemic__info">
+                                     <p class="systemic__text">
+                                        Обучение в формате видео
+                                        конференций и вебинаров
+                                     </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="item">
-                            <img src="img/img-3.jpg" alt="">
-                            <span class="owl-carousel__play-button"></span>
-                            <p>debil</p>
+                            <div class="systemic__wrapper">
+                                <div class="systemic__pic">
+                                    <img src="img/Notebook.png" alt="" class="systemic__img">
+                                </div>
+                                <div class="systemic__info">
+                                     <p class="systemic__text">
+                                        Дистанционный формат обучения
+                                     </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="item">
-                            <img src="img/img-444444.jpg" alt="">
-                            <span class="owl-carousel__play-button"></span>
-                            <p>debil</p>
+                            <div class="systemic__wrapper">
+                                <div class="systemic__pic">
+                                    <img src="img/Mackbook.png" alt="" class="systemic__img">
+                                </div>
+                                <div class="systemic__info">
+                                     <p class="systemic__text">
+                                        Консультация персональнго куратора
+                                     </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
