--- a/index.html
+++ b/index.html
@@ -300,7 +300,21 @@
             </div>
         </div>
     </div>
-    
+    <div class="trust">
+        <div class="container">
+            <div class="row trust__row-1">
+                <div class="col-md-4">
+
+                </div>
+            </div>
+            <div class="row trust__row-2">
+
+            </div>
+            <div class="row trust__row-3">
+
+            </div>
+        </div>
+    </div>
 </body>
 <script src='js/jquery-3.5.1.min.js'></script>
 <script src='js/owl.carousel.min.js'></script>
