--- a/index.html
+++ b/index.html
@@ -304,14 +304,30 @@
         <div class="container">
             <div class="row trust__row-1">
                 <div class="col-md-4">
-
+                    <h3 class="trust__title">Нам доверяют</h3>
                 </div>
             </div>
             <div class="row trust__row-2">
+                <div class="col d-flex">
+                    <img src="img/sber.png" alt="">
 
+                    <img src="img/mts.png" alt="">
+
+                    <img src="img/sber.png" alt="">
+               
+                    <img src="img/mts.png" alt="">
+                </div>
             </div>
             <div class="row trust__row-3">
+                <div class="col d-flex">
+                    <img src="img/sber.png" alt="">
 
+                    <img src="img/mts.png" alt="">
+
+                    <img src="img/sber.png" alt="">
+               
+                    <img src="img/mts.png" alt="">
+                </div>
             </div>
         </div>
     </div>
