--- a/index.html
+++ b/index.html
@@ -331,6 +331,49 @@
             </div>
         </div>
     </div>
+    <div class="useful">
+        <div class="container">
+            <div class="row useful__row-1">
+                <div class="col-md-5">
+                    <h3>Полезные материалы</h3>
+                </div>
+                <div class="offset-md-3 col-md-4 useful__outset outset">
+                    <a href='#'>
+                        посмотреть все
+                    </a>
+                </div>
+            </div>
+            <div class="row useful__row-2">
+                <div class="col-md-4">
+                    <div class="useful__item">
+                        <div class="useful__info">
+                            <h6 class="useful__name">Медпорсанал - быстрый карьерный рост</h6>
+                            <p class="useful__rank">Советы специалиста</p>
+                        </div>
+                        <img src="img/med-personal.jpg" alt="" class="useful__photo">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="useful__item">
+                        <div class="useful__info">
+                            <h6 class="useful__name">Повышение квалификации педагогов</h6>
+                            <p class="useful__rank">Статья</p>
+                        </div>
+                        <img src="img/ped.jpg" alt="" class="useful__photo">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="useful__item">
+                        <div class="useful__info">
+                            <h6 class="useful__name">Повышение квалификации по ГО и ЧС</h6>
+                            <p class="useful__rank">Статья</p>
+                        </div>
+                        <img src="img/go.jpg" alt="" class="useful__photo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src='js/jquery-3.5.1.min.js'></script>
 <script src='js/owl.carousel.min.js'></script>
