--- a/index.html
+++ b/index.html
@@ -374,6 +374,26 @@
             </div>
         </div>
     </div>
+    <div class="help">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 help__left">
+                    <h2 class="help__title">Поможем в выборе</h2>
+                    <p class="help__subtitle">Если у вас есть вопросы о формате или вы не знаете что выбрать, оставьте свой номер: мы позвоним, чтобы ответить на все ваши вопросы.</p>
+                    <input type="text" class="help__name">
+                    <input type="text" class="help__nubmer">
+                    <input type="text" class="help__email">
+                    <input type="text" class="help__check">
+                    <button class="help__send"></button>
+                </div>
+                <div class="col-md-6 help__right">
+                    <div class="help__photo">
+                      
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src='js/jquery-3.5.1.min.js'></script>
 <script src='js/owl.carousel.min.js'></script>
