--- a/index.html
+++ b/index.html
@@ -378,17 +378,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 help__left">
-                    <h2 class="help__title">Поможем в выборе</h2>
-                    <p class="help__subtitle">Если у вас есть вопросы о формате или вы не знаете что выбрать, оставьте свой номер: мы позвоним, чтобы ответить на все ваши вопросы.</p>
-                    <input type="text" class="help__name">
-                    <input type="text" class="help__nubmer">
-                    <input type="text" class="help__email">
-                    <input type="text" class="help__check">
-                    <button class="help__send"></button>
+                   <div class="help__info">
+                        <h2 class="help__title">Поможем в выборе</h2>
+                        <p class="help__subtitle">Если у вас есть вопросы о формате или вы не знаете что выбрать, оставьте свой номер: мы позвоним, чтобы ответить на все ваши вопросы.</p>
+                        <input type="text" class="help__form help__form-name" placeholder="имя">
+                        <div class="help__contact">
+                            <input type="text" class="help__form help__form-nubmer" placeholder="телефон">
+                            <input type="text" class="help__form help__form-email" placeholder="email">
+                        </div>
+                        <input type="checkbox" class="help__form help__form-check">
+                        <button class="help__send"></button>
+                   </div>
                 </div>
                 <div class="col-md-6 help__right">
                     <div class="help__photo">
-                      
+                        
                     </div>
                 </div>
             </div>
