--- a/index.html
+++ b/index.html
@@ -386,8 +386,15 @@
                             <input type="text" class="help__form help__form-nubmer" placeholder="телефон">
                             <input type="text" class="help__form help__form-email" placeholder="email">
                         </div>
-                        <input type="checkbox" class="help__form help__form-check">
-                        <button class="help__send"></button>
+                        <div class="help__interplay">
+                            <div class="help__politic">
+                                <input type="checkbox" class="help__form help__form-check">
+                                <span class="help__text">Я согласен с политикой обработки персональных данных</span>
+                            </div>
+                            <button class="help__send">
+                                Отправить
+                            </button>
+                        </div>
                    </div>
                 </div>
                 <div class="col-md-6 help__right">
@@ -397,6 +404,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="efficent">
+        
     </div>
 </body>
 <script src='js/jquery-3.5.1.min.js'></script>
