--- a/index.html
+++ b/index.html
@@ -409,7 +409,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    
+                    <h6 class="efficent__title">
+                        ТехАльянс  —  эффективный помощник 
+                    </h6>
+                    <p class="efficent__text">
+                        Компания ТехАльянс проводит обучение специалистов по безопасности труда, осуществляет услуги по лицензированию и сертификации, а также проводит курсы по повышению квалификации и переподготовки кадров в Тюмени и для жителей других регионов онлайн.
+                    </p>
                 </div>
             </div>
         </div>
