--- a/index.html
+++ b/index.html
@@ -416,6 +416,22 @@
                         Компания ТехАльянс проводит обучение специалистов по безопасности труда, осуществляет услуги по лицензированию и сертификации, а также проводит курсы по повышению квалификации и переподготовки кадров в Тюмени и для жителей других регионов онлайн.
                     </p>
                 </div>
+                <div class="offset-md-1 col-md-6">
+                    <ul class="efficent__list efficent__list-left">
+                        <li class="efficent__item">Повышение квалификации</li>
+                        <li class="efficent__item">Сертификация</li>
+                        <li class="efficent__item">Краткосрочное обучение</li>
+                        <li class="efficent__item">Разработка паспортов</li>
+                        <li class="efficent__item">Программы профессиональной переподготовки</li>
+                    </ul>
+                    <ul class="efficent__list efficent__list-right">
+                        <li class="efficent__item">Рабочие специальности</li>
+                        <li class="efficent__item">Лицензирование</li>
+                        <li class="efficent__item">Юр.Услуги</li>
+                        <li class="efficent__item">СОУТ</li>
+                        <li class="efficent__item">Аттестация специалистов</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
