end beta verison md

--- a/index.html
+++ b/index.html
@@ -435,6 +435,34 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="container">
+            <div class="row footer__row-1">
+                <div class="col">
+                    <h6 class="footer__title">Социальные сети</h6>
+                </div>
+            </div>
+            <div class="row footer__row-2">
+                <div class="col-md-6">
+                    <div class="footer__social-media">
+                        <img src="img/svg/facebook.svg" alt="" class="footer__pic">
+                        <img src="img/svg/k.svg" alt="" class="footer__pic">
+                        <img src="img/svg/classmates.png" alt="" class="footer__pic">
+                        <img src="img/svg/twitter.svg" alt="" class="footer__pic">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                   <div class="footer__right">
+                        <span class="footer__text">Контакты</span>
+                        <span class="footer__dot">.</span>
+                        <span class="footer__text">Карты сайта</span>
+                        <span class="footer__dot">.</span>
+                        <span class="footer__text">Политики обработки персональных данных</span>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src='js/jquery-3.5.1.min.js'></script>
 <script src='js/owl.carousel.min.js'></script>
