--- a/index.html
+++ b/index.html
@@ -57,33 +57,51 @@
     </div>
     <div class="variables">
         <div class="container">
-            <div class="row variables__row-1">
-                <div class="col-md-9">
-                    <div class="variables__left d-flex">
-                        <ul class="variables__list">
-                            <li class="variables__item">Повышение квалификации</li>
-                            <li class="variables__item">Сертификация</li>
+            <div class="row">
+               <div class="col">
+                    <ul class="variables__list">
+                        <ul class="variables__item">
+                           <li class='variables__text'>
+                                Повышение квалификации
+                           </li>
+                           <li class='variables__text'>
+                                Сертификация
+                           </li>
                         </ul>
-                        <ul class="variables__list">
-                            <li class="variables__item">Краткосрочное обучение</li>
-                            <li class="variables__item">Рабочие специальности</li>
-                        </ul>
-                        <ul class="variables__list">
-                            <li class="variables__item">Разработка паспортов</li>
-                            <li class="variables__item">Лицензирование</li>
-                        </ul>
-                        <ul class="variables__list">
-                            <li class="variables__item">Аттестация специалистов</li>
-                            <li class="variables__item">Юр.Услуги</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                   <ul class="variables__list">
-                       <li class="variables__item">Программы профессиональной переподготовки</li>
-                       <li class="variables__item">СОУТ</li>
-                   </ul>
-                </div>
+                        <ul class="variables__item">
+                            <li class='variables__text'>
+                                Краткосрочное обучение
+                            </li>
+                            <li class='variables__text'>
+                                Рабочие специальности
+                            </li>
+                         </ul>
+                         <ul class="variables__item">
+                            <li class='variables__text'>
+                                Разрабока паспортов
+                            </li>
+                            <li class='variables__text'>
+                                Лицензирование
+                            </li>
+                         </ul>
+                         <ul class="variables__item">
+                            <li class='variables__text'>
+                                 Повышение квалификации
+                            </li>
+                            <li class='variables__text'>
+                                Сертификация
+                            </li>
+                         </ul>
+                         <ul class="variables__item variables__item-5">
+                            <li class='variables__text'>
+                                Программы проффесиальной переподготовки
+                            </li>
+                            <li class='variables__text'>
+                                СОУТ
+                            </li>
+                         </ul>
+                    </ul>
+               </div>
             </div>
         </div>
     </div>
