fix md 3 end skills and start teaching

--- a/index.html
+++ b/index.html
@@ -107,11 +107,22 @@
     </div>
     <div class="skills">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row skills__row-1">
+                <div class="col-md-5">
                     <h3 class="skills__title">
                         Повышение квалификации
                     </h3>
+                </div>
+                <div class="offset-md-3 col-md-4">
+                    <p class='skills__outset'>
+                        <a href='#' class="skills__link">
+                            посмотреть все
+                        <a>
+                    </p>
+                </div>
+            </div>
+            <div class="row skills__row-2">
+                <div class="col-md-6">
                     <div class="skills__offer">
                         <div class="skills__head">
                             <h6 class="skills__name">
@@ -131,11 +142,6 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <p class='skills__outset'>
-                        <a href='#' class="skills__link">
-                            посмотреть все
-                        <a>
-                    </p>
                     <div class="skills__offer">
                         <div class="skills__head">
                             <h6 class="skills__name">
@@ -209,7 +215,7 @@
             <div class="row teaching__row-2">
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                        <img src="img/builder-1.jpg" alt="" class="teaching__pic">
+                            <img src="img/builder-4.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Монтажник</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -219,7 +225,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="teaching__item d-flex">
-                        <img src="img/builder-3.jpg" alt="" class="teaching__pic">
+                            <img src="img/builder-3.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Сварщик</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -231,7 +237,7 @@
             <div class="row teaching-row-3">
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                        <img src="img/builder-2.jpg" alt="" class="teaching__pic">
+                            <img src="img/builder-4.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Отделочник</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -241,7 +247,7 @@
                 </div>
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                        <img src="img/builder-4.jpg" alt="" class="teaching__pic">
+                            <img src="img/builder-3.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Стопальщик</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
