--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                     </h1>
                 </div>
                 <div class="col-md-4">
-                    <div class="rise__wrapper">
-                        <img src="img/girl__note-removebg-preview.png" alt="" class="rise__pic">
-                    </div>
+                    <img src="img/girl__note-removebg-preview.png" alt="" class="rise__pic">
                 </div>
             </div>
         </div>
@@ -215,7 +213,7 @@
             <div class="row teaching__row-2">
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                            <img src="img/builder-4.jpg" alt="" class="teaching__pic">
+                        <img src="img/builder-4.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Монтажник</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -225,7 +223,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="teaching__item d-flex">
-                            <img src="img/builder-3.jpg" alt="" class="teaching__pic">
+                        <img src="img/builder-3.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Сварщик</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -237,7 +235,7 @@
             <div class="row teaching-row-3">
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                            <img src="img/builder-4.jpg" alt="" class="teaching__pic">
+                        <img src="img/builder-4.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Отделочник</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -247,7 +245,7 @@
                 </div>
                 <div class="col-md-6">
                    <div class="teaching__item d-flex">
-                            <img src="img/builder-3.jpg" alt="" class="teaching__pic">
+                        <img src="img/builder-3.jpg" alt="" class="teaching__pic">
                         <div class="teaching__info">
                             <h6 class="teaching__name">Стопальщик</h6>
                             <p class="teaching__text">Краткосрочное обучение</p>
@@ -333,24 +331,24 @@
             </div>
             <div class="row trust__row-2">
                 <div class="col d-flex">
-                    <img src="img/sber.png" alt="">
+                    <img src="img/sber.png" alt="" class='trust__img'>
 
-                    <img src="img/mts.png" alt="">
+                    <img src="img/mts.png" alt="" class='trust__img'>
 
-                    <img src="img/sber.png" alt="">
+                    <img src="img/sber.png" alt="" class='trust__img'>
                
-                    <img src="img/mts.png" alt="">
+                    <img src="img/mts.png" alt="" class='trust__img'>
                 </div>
             </div>
             <div class="row trust__row-3">
                 <div class="col d-flex">
-                    <img src="img/sber.png" alt="">
+                    <img src="img/sber.png" alt="" class='trust__img'>
 
-                    <img src="img/mts.png" alt="">
+                    <img src="img/mts.png" alt="" class='trust__img'>
 
-                    <img src="img/sber.png" alt="">
+                    <img src="img/sber.png" alt="" class='trust__img'>
                
-                    <img src="img/mts.png" alt="">
+                    <img src="img/mts.png" alt="" class='trust__img'>
                 </div>
             </div>
         </div>
